--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,37 @@
+altgraph==0.17.2
 autopep8==1.6.0
 beautifulsoup4==4.11.1
 certifi==2022.5.18.1
+cffi==1.15.0
 charset-normalizer==2.0.12
 colorama==0.4.4
+cryptography==37.0.2
 decorator==4.4.2
+future==0.18.2
 idna==3.3
 imageio==2.19.3
 imageio-ffmpeg==0.4.7
+lxml==4.9.0
 moviepy==1.0.3
 numpy==1.22.4
+pefile==2022.5.30
 Pillow==9.1.1
 proglog==0.1.10
 pycodestyle==2.8.0
+pycparser==2.21
+pyinstaller==5.1
+pyinstaller-hooks-contrib==2022.7
+pyOpenSSL==22.0.0
+pyqtdarktheme==1.1.0
+PySide6==6.3.0
+PySide6-Addons==6.3.0
+PySide6-Essentials==6.3.0
+PySocks==1.7.1
+python3-pip-autoremove==0.9.1
+pytube==12.1.0
+pywin32-ctypes==0.2.0
 requests==2.27.1
+shiboken6==6.3.0
 soupsieve==2.3.2.post1
 toml==0.10.2
 tqdm==4.64.0
