--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 altgraph==0.17.2
+autoflake==1.4
 autopep8==1.6.0
 beautifulsoup4==4.11.1
 certifi==2022.5.18.1
 cffi==1.15.0
 charset-normalizer==2.0.12
 colorama==0.4.4
+comtypes==1.1.11
 cryptography==37.0.2
 decorator==4.4.2
 future==0.18.2
@@ -19,16 +21,22 @@ Pillow==9.1.1
 proglog==0.1.10
 pycodestyle==2.8.0
 pycparser==2.21
+pyflakes==2.4.0
+PyGetWindow==0.0.9
 pyinstaller==5.1
 pyinstaller-hooks-contrib==2022.7
 pyOpenSSL==22.0.0
+pypiwin32==223
 pyqtdarktheme==1.1.0
+PyRect==0.2.0
 PySide6==6.3.0
 PySide6-Addons==6.3.0
 PySide6-Essentials==6.3.0
 PySocks==1.7.1
+PyTaskbarProgress==0.0.8
 python3-pip-autoremove==0.9.1
 pytube==12.1.0
+pywin32==304
 pywin32-ctypes==0.2.0
 requests==2.27.1
 shiboken6==6.3.0
@@ -36,3 +44,4 @@ soupsieve==2.3.2.post1
 toml==0.10.2
 tqdm==4.64.0
 urllib3==1.26.9
+win10toast-click==0.1.2
