--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 altgraph==0.17.2
+autoflake==1.4
+autopep8==1.6.0
 beautifulsoup4==4.11.1
 certifi==2022.6.15
 cffi==1.15.1
@@ -12,14 +14,15 @@ imageio==2.19.3
 imageio-ffmpeg==0.4.7
 lxml==4.9.1
 moviepy==1.0.3
-numpy==1.23.0
+numpy==1.23.1
 pefile==2022.5.30
 Pillow==9.2.0
 proglog==0.1.10
 pycodestyle==2.8.0
 pycparser==2.21
-pyinstaller==5.1
-pyinstaller-hooks-contrib==2022.7
+pyflakes==2.4.0
+pyinstaller==5.2
+pyinstaller-hooks-contrib==2022.8
 pyOpenSSL==22.0.0
 pypiwin32==223
 pyqtdarktheme==1.1.0
@@ -35,5 +38,5 @@ shiboken6==6.3.1
 soupsieve==2.3.2.post1
 toml==0.10.2
 tqdm==4.64.0
-urllib3==1.26.9
+urllib3==1.26.10
 win10toast-click==0.1.2
